# q2-snpSift

./: .gitignore  Dockerfile  README.md  _format.py  noxfile.py  pyproject.toml
q2_snpsift/: __init__.py  _format.py  _snpsift.py  _transformer.py  _type.py  plugin_setup.py
