[tool.poetry]
name = "q2-snpSift"
description = "Qiime2 plugin for SnpSift"
version = "0.0.0"
authors = ["JOLI <joli@novozymes.com> HNKO <hnko@novozymes.com>"]
packages = [{include = "q2_snpsift"}]

[tool.poetry.dependencies]
python = "^3.8.1"
# q2-gatk = {git = "https://github.com/NZ-MRDP/q2-gatk"}

[tool.poetry.group.dev.dependencies]
coverage = "^7.1.0"
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
codespell = "^2.2.2"
flake8-docstrings = "^1.7.0"
pytest = "^7.2.1"
pyright = "^1.1.293"
pytest-cov = "^4.0.0"
pytest-isort = "^3.1.0"

[tool.pyright]
exclude = ["*nox"]
reportMissingImports = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# This doesn't seem to work, I think it is a qiime issue though
[tool.poetry.plugins."qiime2.plugins"]
"q2-snpSift" = "q2-snpSift=q2_snpsift.plugin_setup:plugin"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
