[project]
name = "q2-snpsift"
version = "0.1.4"
description = "QIIME 2 plugin for SnpSift"
authors = [
    { name = "JOLI", email = "joli@novozymes.com" },
    { name = "HNKO", email = "hnko@novozymes.com" },
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5.2",
]

[project.entry-points."qiime2.plugins"]
"q2-snpsift" = "q2_snpsift.plugin_setup:plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["q2_snpsift"]

[dependency-groups]
dev = [
    "coverage>=7.1.0",
    "codespell>=2.2.2",
    "pyright>=1.1.293",
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[tool.pyright]
exclude = ["*nox"]
reportMissingImports = false

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["D", "E", "F", "I", "W"]
ignore = ["D203", "D213"]

[tool.ruff.lint.isort]
known-first-party = ["q2_snpsift"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
